增加商品搜索和定时更新物流信息
