# pos-products/src/main/java/com/micropos/products/model/Product.java
@@ -18,4 +18,7 @@ public class Product implements Serializable {
     private double price;
 
     private String image;
+
+    private String category;
+
 }
